--- a/client/src/components/global/HeaderMenu/HeaderMenu.module.scss
+++ b/client/src/components/global/HeaderMenu/HeaderMenu.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   z-index: 4;
-  min-height: 155px;
+  min-height: 100px;
   display: flex;
   align-items: center;
   background-color: $color-secondary;
